# exp-date-recognition

./: README.md  pyproject.toml  requirements.txt
notebooks/: detect.ipynb  exp_date_recognition_v3.5.pt  exp_date_recognition_v3.pt  train.ipynb  train_recognition.ipynb
src/: __init__.py
src/common/: engine.py
src/exp_date_recognition/detection/: dataset.py  detect.py  train.py  transformations.py
src/exp_date_recognition/detection/model/: resnet50.py
src/exp_date_recognition/detection/model/checkpoints/: resnet50_exp_date_latest.pt
src/utils/: engine.py
tests/: test_exp_date_recognition.py
