[tool.poetry]
name = "exp-date-recognition"
version = "0.1.0"
description = ""
authors = ["diego <diego@pulpowms.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
torchvision = "^0.17.1"
datasets = "^2.18.0"
albumentations = "1.3.0"
numpy = "1.24.4"
pillow = "^10.2.0"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
pycocotools = "^2.0.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
